syntax = "proto3";

package taska.proto.list;

message CreateListReq {
  string board_id = 1;
  string title = 2;
}
message CreateListRes {
}
message ArchiveListReq {
}
message ArchiveListRes {
}
message UnArchiveListReq {
}
message UnArchiveListRes {
}
message UpdateListReq {
}
message UpdateListRes {
}

service ListService {
  rpc Create (CreateListReq) returns (CreateListRes);
  rpc Archive (ArchiveListReq) returns (ArchiveListRes);
  rpc UnArchive (UnArchiveListReq) returns (UnArchiveListRes);
  rpc Update (UpdateListReq) returns (UpdateListRes);
}